# cryptid-native

./: CMakeLists.txt  dec_r.c  enc_only.c  enc_w.c
include/util/: IO.h
src/util/: IO.c
